c_min.output
State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier ID ';'
    7                | type_specifier ID '[' NUM ']' ';'

    8 fun_declaration: type_specifier ID '(' params ')' compound_stmt

    9 type_specifier: INT
   10               | VOID

   11 params: param_list
   12       | VOID

   13 param_list: param_list ',' param
   14           | param

   15 param: type_specifier ID
   16      | type_specifier ID '[' ']'

   17 compound_stmt: '{' local_declarations statement_list '}'

   18 local_declarations: local_declarations var_declaration
   19                   | %empty

   20 statement_list: statement_list statement
   21               | %empty

   22 statement: expression_stmt
   23          | compound_stmt
   24          | selection_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 expression_stmt: expression ';'
   28                | ';'

   29 selection_stmt: IF '(' expression ')' statement
   30               | IF '(' expression ')' statement ELSE statement

   31 iteration_stmt: WHILE '(' expression ')' statement

   32 return_stmt: RETURN ';'
   33            | RETURN expression ';'

   34 expression: var '=' expression
   35           | simple_expression

   36 var: ID
   37    | ID '[' expression ']'

   38 simple_expression: additive_expression relop additive_expression
   39                  | additive_expression

   40 additive_expression: additive_expression addop term
   41                    | term

   42 relop: '<'
   43      | LESSEQ
   44      | '>'
   45      | GREATEQ
   46      | EQEQ
   47      | NOTEQ

   48 addop: '+'
   49      | '-'

   50 term: term mulop factor
   51     | factor

   52 mulop: '*'
   53      | '/'

   54 factor: '(' expression ')'
   55       | var
   56       | call
   57       | NUM

   58 call: ID '(' args ')'

   59 args: arg_list
   60     | %empty

   61 arg_list: arg_list ',' expression
   62         | expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 29 30 31 54 58
')' (41) 8 29 30 31 54 58
'*' (42) 52
'+' (43) 48
',' (44) 13 61
'-' (45) 49
'/' (47) 53
';' (59) 6 7 27 28 32 33
'<' (60) 42
'=' (61) 34
'>' (62) 44
'[' (91) 7 16 37
']' (93) 7 16 37
'{' (123) 17
'}' (125) 17
error (256)
RETURN (258) 32 33
INT (259) 9
ELSE (260) 30
IF (261) 29 30
WHILE (262) 31
VOID (263) 10 12
GREATEQ (264) 45
NOTEQ (265) 47
EQEQ (266) 46
LESSEQ (267) 43
NUM (268) 7 57
ID (269) 6 7 8 15 16 36 37 58


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1, on right: 0
declaration_list (32)
    on left: 2 3, on right: 1 2
declaration (33)
    on left: 4 5, on right: 2 3
var_declaration (34)
    on left: 6 7, on right: 4 18
fun_declaration (35)
    on left: 8, on right: 5
type_specifier (36)
    on left: 9 10, on right: 6 7 8 15 16
params (37)
    on left: 11 12, on right: 8
param_list (38)
    on left: 13 14, on right: 11 13
param (39)
    on left: 15 16, on right: 13 14
compound_stmt (40)
    on left: 17, on right: 8 23
local_declarations (41)
    on left: 18 19, on right: 17 18
statement_list (42)
    on left: 20 21, on right: 17 20
statement (43)
    on left: 22 23 24 25 26, on right: 20 29 30 31
expression_stmt (44)
    on left: 27 28, on right: 22
selection_stmt (45)
    on left: 29 30, on right: 24
iteration_stmt (46)
    on left: 31, on right: 25
return_stmt (47)
    on left: 32 33, on right: 26
expression (48)
    on left: 34 35, on right: 27 29 30 31 33 34 37 54 61 62
var (49)
    on left: 36 37, on right: 34 55
simple_expression (50)
    on left: 38 39, on right: 35
additive_expression (51)
    on left: 40 41, on right: 38 39 40
relop (52)
    on left: 42 43 44 45 46 47, on right: 38
addop (53)
    on left: 48 49, on right: 40
term (54)
    on left: 50 51, on right: 40 41 50
mulop (55)
    on left: 52 53, on right: 50
factor (56)
    on left: 54 55 56 57, on right: 50 51
call (57)
    on left: 58, on right: 56
args (58)
    on left: 59 60, on right: 58
arg_list (59)
    on left: 61 62, on right: 59 61


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7
    type_specifier    go to state 8


State 1

    9 type_specifier: INT .

    $default  reduce using rule 9 (type_specifier)


State 2

   10 type_specifier: VOID .

    $default  reduce using rule 10 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    fun_declaration  go to state 7
    type_specifier   go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 8

    6 var_declaration: type_specifier . ID ';'
    7                | type_specifier . ID '[' NUM ']' ';'
    8 fun_declaration: type_specifier . ID '(' params ')' compound_stmt

    ID  shift, and go to state 11


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

    6 var_declaration: type_specifier ID . ';'
    7                | type_specifier ID . '[' NUM ']' ';'
    8 fun_declaration: type_specifier ID . '(' params ')' compound_stmt

    ';'  shift, and go to state 12
    '['  shift, and go to state 13
    '('  shift, and go to state 14


State 12

    6 var_declaration: type_specifier ID ';' .

    $default  reduce using rule 6 (var_declaration)


State 13

    7 var_declaration: type_specifier ID '[' . NUM ']' ';'

    NUM  shift, and go to state 15


State 14

    8 fun_declaration: type_specifier ID '(' . params ')' compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 15

    7 var_declaration: type_specifier ID '[' NUM . ']' ';'

    ']'  shift, and go to state 21


State 16

   10 type_specifier: VOID .
   12 params: VOID .

    ')'       reduce using rule 12 (params)
    $default  reduce using rule 10 (type_specifier)


State 17

   15 param: type_specifier . ID
   16      | type_specifier . ID '[' ']'

    ID  shift, and go to state 22


State 18

    8 fun_declaration: type_specifier ID '(' params . ')' compound_stmt

    ')'  shift, and go to state 23


State 19

   11 params: param_list .
   13 param_list: param_list . ',' param

    ','  shift, and go to state 24

    $default  reduce using rule 11 (params)


State 20

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 21

    7 var_declaration: type_specifier ID '[' NUM ']' . ';'

    ';'  shift, and go to state 25


State 22

   15 param: type_specifier ID .
   16      | type_specifier ID . '[' ']'

    '['  shift, and go to state 26

    $default  reduce using rule 15 (param)


State 23

    8 fun_declaration: type_specifier ID '(' params ')' . compound_stmt

    '{'  shift, and go to state 27

    compound_stmt  go to state 28


State 24

   13 param_list: param_list ',' . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 29


State 25

    7 var_declaration: type_specifier ID '[' NUM ']' ';' .

    $default  reduce using rule 7 (var_declaration)


State 26

   16 param: type_specifier ID '[' . ']'

    ']'  shift, and go to state 30


State 27

   17 compound_stmt: '{' . local_declarations statement_list '}'

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 31


State 28

    8 fun_declaration: type_specifier ID '(' params ')' compound_stmt .

    $default  reduce using rule 8 (fun_declaration)


State 29

   13 param_list: param_list ',' param .

    $default  reduce using rule 13 (param_list)


State 30

   16 param: type_specifier ID '[' ']' .

    $default  reduce using rule 16 (param)


State 31

   17 compound_stmt: '{' local_declarations . statement_list '}'
   18 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaration  go to state 32
    type_specifier   go to state 33
    statement_list   go to state 34


State 32

   18 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 18 (local_declarations)


State 33

    6 var_declaration: type_specifier . ID ';'
    7                | type_specifier . ID '[' NUM ']' ';'

    ID  shift, and go to state 35


State 34

   17 compound_stmt: '{' local_declarations statement_list . '}'
   20 statement_list: statement_list . statement

    RETURN  shift, and go to state 36
    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    ';'     shift, and go to state 41
    '('     shift, and go to state 42
    '{'     shift, and go to state 27
    '}'     shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 45
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 35

    6 var_declaration: type_specifier ID . ';'
    7                | type_specifier ID . '[' NUM ']' ';'

    ';'  shift, and go to state 12
    '['  shift, and go to state 13


State 36

   32 return_stmt: RETURN . ';'
   33            | RETURN . expression ';'

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    ';'  shift, and go to state 57
    '('  shift, and go to state 42

    expression           go to state 58
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 37

   29 selection_stmt: IF . '(' expression ')' statement
   30               | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 59


State 38

   31 iteration_stmt: WHILE . '(' expression ')' statement

    '('  shift, and go to state 60


State 39

   57 factor: NUM .

    $default  reduce using rule 57 (factor)


State 40

   36 var: ID .
   37    | ID . '[' expression ']'
   58 call: ID . '(' args ')'

    '['  shift, and go to state 61
    '('  shift, and go to state 62

    $default  reduce using rule 36 (var)


State 41

   28 expression_stmt: ';' .

    $default  reduce using rule 28 (expression_stmt)


State 42

   54 factor: '(' . expression ')'

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    expression           go to state 63
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 43

   17 compound_stmt: '{' local_declarations statement_list '}' .

    $default  reduce using rule 17 (compound_stmt)


State 44

   23 statement: compound_stmt .

    $default  reduce using rule 23 (statement)


State 45

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 46

   22 statement: expression_stmt .

    $default  reduce using rule 22 (statement)


State 47

   24 statement: selection_stmt .

    $default  reduce using rule 24 (statement)


State 48

   25 statement: iteration_stmt .

    $default  reduce using rule 25 (statement)


State 49

   26 statement: return_stmt .

    $default  reduce using rule 26 (statement)


State 50

   27 expression_stmt: expression . ';'

    ';'  shift, and go to state 64


State 51

   34 expression: var . '=' expression
   55 factor: var .

    '='  shift, and go to state 65

    $default  reduce using rule 55 (factor)


State 52

   35 expression: simple_expression .

    $default  reduce using rule 35 (expression)


State 53

   38 simple_expression: additive_expression . relop additive_expression
   39                  | additive_expression .
   40 additive_expression: additive_expression . addop term

    GREATEQ  shift, and go to state 66
    NOTEQ    shift, and go to state 67
    EQEQ     shift, and go to state 68
    LESSEQ   shift, and go to state 69
    '<'      shift, and go to state 70
    '>'      shift, and go to state 71
    '+'      shift, and go to state 72
    '-'      shift, and go to state 73

    $default  reduce using rule 39 (simple_expression)

    relop  go to state 74
    addop  go to state 75


State 54

   41 additive_expression: term .
   50 term: term . mulop factor

    '*'  shift, and go to state 76
    '/'  shift, and go to state 77

    $default  reduce using rule 41 (additive_expression)

    mulop  go to state 78


State 55

   51 term: factor .

    $default  reduce using rule 51 (term)


State 56

   56 factor: call .

    $default  reduce using rule 56 (factor)


State 57

   32 return_stmt: RETURN ';' .

    $default  reduce using rule 32 (return_stmt)


State 58

   33 return_stmt: RETURN expression . ';'

    ';'  shift, and go to state 79


State 59

   29 selection_stmt: IF '(' . expression ')' statement
   30               | IF '(' . expression ')' statement ELSE statement

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    expression           go to state 80
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 60

   31 iteration_stmt: WHILE '(' . expression ')' statement

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    expression           go to state 81
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 61

   37 var: ID '[' . expression ']'

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    expression           go to state 82
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 62

   58 call: ID '(' . args ')'

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    $default  reduce using rule 60 (args)

    expression           go to state 83
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    args                 go to state 84
    arg_list             go to state 85


State 63

   54 factor: '(' expression . ')'

    ')'  shift, and go to state 86


State 64

   27 expression_stmt: expression ';' .

    $default  reduce using rule 27 (expression_stmt)


State 65

   34 expression: var '=' . expression

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    expression           go to state 87
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 66

   45 relop: GREATEQ .

    $default  reduce using rule 45 (relop)


State 67

   47 relop: NOTEQ .

    $default  reduce using rule 47 (relop)


State 68

   46 relop: EQEQ .

    $default  reduce using rule 46 (relop)


State 69

   43 relop: LESSEQ .

    $default  reduce using rule 43 (relop)


State 70

   42 relop: '<' .

    $default  reduce using rule 42 (relop)


State 71

   44 relop: '>' .

    $default  reduce using rule 44 (relop)


State 72

   48 addop: '+' .

    $default  reduce using rule 48 (addop)


State 73

   49 addop: '-' .

    $default  reduce using rule 49 (addop)


State 74

   38 simple_expression: additive_expression relop . additive_expression

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    var                  go to state 88
    additive_expression  go to state 89
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 75

   40 additive_expression: additive_expression addop . term

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    var     go to state 88
    term    go to state 90
    factor  go to state 55
    call    go to state 56


State 76

   52 mulop: '*' .

    $default  reduce using rule 52 (mulop)


State 77

   53 mulop: '/' .

    $default  reduce using rule 53 (mulop)


State 78

   50 term: term mulop . factor

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    var     go to state 88
    factor  go to state 91
    call    go to state 56


State 79

   33 return_stmt: RETURN expression ';' .

    $default  reduce using rule 33 (return_stmt)


State 80

   29 selection_stmt: IF '(' expression . ')' statement
   30               | IF '(' expression . ')' statement ELSE statement

    ')'  shift, and go to state 92


State 81

   31 iteration_stmt: WHILE '(' expression . ')' statement

    ')'  shift, and go to state 93


State 82

   37 var: ID '[' expression . ']'

    ']'  shift, and go to state 94


State 83

   62 arg_list: expression .

    $default  reduce using rule 62 (arg_list)


State 84

   58 call: ID '(' args . ')'

    ')'  shift, and go to state 95


State 85

   59 args: arg_list .
   61 arg_list: arg_list . ',' expression

    ','  shift, and go to state 96

    $default  reduce using rule 59 (args)


State 86

   54 factor: '(' expression ')' .

    $default  reduce using rule 54 (factor)


State 87

   34 expression: var '=' expression .

    $default  reduce using rule 34 (expression)


State 88

   55 factor: var .

    $default  reduce using rule 55 (factor)


State 89

   38 simple_expression: additive_expression relop additive_expression .
   40 additive_expression: additive_expression . addop term

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73

    $default  reduce using rule 38 (simple_expression)

    addop  go to state 75


State 90

   40 additive_expression: additive_expression addop term .
   50 term: term . mulop factor

    '*'  shift, and go to state 76
    '/'  shift, and go to state 77

    $default  reduce using rule 40 (additive_expression)

    mulop  go to state 78


State 91

   50 term: term mulop factor .

    $default  reduce using rule 50 (term)


State 92

   29 selection_stmt: IF '(' expression ')' . statement
   30               | IF '(' expression ')' . statement ELSE statement

    RETURN  shift, and go to state 36
    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    ';'     shift, and go to state 41
    '('     shift, and go to state 42
    '{'     shift, and go to state 27

    compound_stmt        go to state 44
    statement            go to state 97
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 93

   31 iteration_stmt: WHILE '(' expression ')' . statement

    RETURN  shift, and go to state 36
    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    ';'     shift, and go to state 41
    '('     shift, and go to state 42
    '{'     shift, and go to state 27

    compound_stmt        go to state 44
    statement            go to state 98
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 94

   37 var: ID '[' expression ']' .

    $default  reduce using rule 37 (var)


State 95

   58 call: ID '(' args ')' .

    $default  reduce using rule 58 (call)


State 96

   61 arg_list: arg_list ',' . expression

    NUM  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 42

    expression           go to state 99
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 97

   29 selection_stmt: IF '(' expression ')' statement .
   30               | IF '(' expression ')' statement . ELSE statement

    ELSE  shift, and go to state 100

    ELSE      [reduce using rule 29 (selection_stmt)]
    $default  reduce using rule 29 (selection_stmt)


State 98

   31 iteration_stmt: WHILE '(' expression ')' statement .

    $default  reduce using rule 31 (iteration_stmt)


State 99

   61 arg_list: arg_list ',' expression .

    $default  reduce using rule 61 (arg_list)


State 100

   30 selection_stmt: IF '(' expression ')' statement ELSE . statement

    RETURN  shift, and go to state 36
    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    ';'     shift, and go to state 41
    '('     shift, and go to state 42
    '{'     shift, and go to state 27

    compound_stmt        go to state 44
    statement            go to state 101
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 101

   30 selection_stmt: IF '(' expression ')' statement ELSE statement .

    $default  reduce using rule 30 (selection_stmt)
